--- a/notebook/C2 调用大模型 API/2.调用大模型API.ipynb
+++ b/notebook/C2 调用大模型 API/2.调用大模型API.ipynb
@@ -29,9 +29,16 @@
     "\n",
     "例如，在下面示例中，我们给 ChatGPT 的提问 “NLP 中的 Prompt 指什么”是我们的提问，其实也就是我们此次的 Prompt；而 ChatGPT 的返回结果就是此次的 Completion。也就是对于 ChatGPT 模型，该 Prompt 对应的 Completion 是下图的展示。\n",
     "\n",
-    "![ChatGPT Prompt Examples](../figures/prompt_example.png)\n",
+    "![ChatGPT Prompt Examples](../../figures/prompt_example.png)\n",
     "\n",
     "后续我们都将会使用 Prompt 替代给 LLM 的输入，使用 Completion 替代 LLM 的输出。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**"
    ]
   }
  ],
