--- a/notebook/C3 整体架构搭建/3. 向量数据库的介绍及使用.ipynb
+++ b/notebook/C3 整体架构搭建/3. 向量数据库的介绍及使用.ipynb
@@ -54,6 +54,8 @@
     "\n",
     "embeddings = OpenAIEmbeddings() \n",
     "embeddings = HuggingFaceEmbeddings(model_name=model_name, model_kwargs=model_kwargs)\n",
+    "\n",
+    "\n",
     "llm = HuggingFacePipeline(pipeline=generate_text)\n",
     "# checking again that everything is working fine\n",
     "llm(prompt=\"Explain me the difference between Data Lakehouse and Data Warehouse.\")\n"
@@ -256,6 +258,26 @@
    "source": [
     "# 导入检索式问答链\n",
     "from langchain.chains import RetrievalQA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_id = 'HUDM/chatglm2-6b'\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "model = AutoModel.from_pretrained(model_id, trust_ remote_ code-True).half().quantize(4).cuda()\n",
+    "model = model.eval()\n",
+    "pipe = pipeline(\n",
+    "    \"text2text-generation\",\n",
+    "    model=model, \n",
+    "    tokenizer=tokenizer, \n",
+    "    max_length=100\n",
+    ")\n",
+    "\n",
+    "llm = HuggingFacePipeline(pipeline=pipe)"
    ]
   },
   {
