--- a/notebook/C1 大模型简介/3. 常⻅⼤模型.md
+++ b/notebook/C1 大模型简介/3. 常⻅⼤模型.md
@@ -3,7 +3,7 @@
 大语言模型的发展历程虽然只有短短不到五年的时间，但是发展速度相当惊人，截止 2023 年
 6 月，国内外有超过百种大模型相继发布。按照时间线给出 2019 年至 2023 年 5 月比较有影响力并且模型参数量超过 100 亿的大语言模型，如下图所示：
 
-![](images\2023-09-03-13-09-51.png)
+![](../../figures/recently_LLM.png)
 
 （该图来源于参考内容 [1] ）
 
@@ -41,9 +41,9 @@
 
 各大公司和研究机构也纷纷发布了类似的系统，如 Google 的 `Bard` 、百度的`文心一言`、科大讯飞的`星火大模型`、智谱的`ChatGLM`、复旦大学的`MOSS`等。表1.1和表1.2分别提供了截止2023年6月的典型开源和未开源大型语言模型的基本情况(来源见参考内容 [2])。我们可以看到，从2022年开始，大型模型呈现出爆发式的增长，各大公司和研究机构都在推出各种类型的大型模型。
 
-![](images\2023-09-03-14-22-10.png)
+![](../../figures/Summary_of_Open_Source_LLM.png)
 
-![](images\2023-09-03-14-22-39.png)
+![](../../figures/Summary_of_Closed_Source_LLM.png)
 
 
 参考内容：
