完成第二章部分内容

--- a/notebook/C2 调用大模型 API/1. 基本概念.md
+++ b/notebook/C2 调用大模型 API/1. 基本概念.md
@@ -1,4 +1,5 @@
-# 基本概念
+
+# 一、基本概念
 
 ## 1. Prompt
 
@@ -77,3 +78,20 @@ Temprature 一般取值在 0~1 之间，当取值较低接近0时，预测的随
     选择适合自己兴趣和研究方向的选题，并与导师进行深入讨论和确认。
 
 对于不同的问题与应用场景，我们可能需要设置不同的 Temprature。例如，在本教程搭建的个人知识库助手项目中，我们一般将 Temprature 设置为0，从而保证助手对知识库内容的稳定使用，规避错误内容、模型幻觉；在产品智能客服、科研论文写作等场景中，我们同样更需要稳定性而不是创造性；但在个性化 AI、创意营销文案生成等场景中，我们就更需要创意性，从而更倾向于将 Temprature 设置为较高的值。
+
+## 3. System Prompt
+
+System Prompt 是随着 ChatGPT API 开放并逐步得到大量使用的一个新兴概念，事实上，它并不在大模型本身训练中得到体现，而是大模型服务方为提升用户体验所设置的一种策略。
+
+具体来说，在使用 ChatGPT API 时，你可以设置两种 Prompt：一种是 System Prompt，该种 Prompt 内容会在整个会话过程中持久地影响模型的回复，且相比于普通 Prompt 具有更高的重要性；另一种是 User Prompt，这更偏向于咱们平时的 Prompt，即需要模型做出回复的输入。
+
+我们一般设置 System Prompt 来对模型进行一些初始化设定，例如，我们可以在 System Prompt 中给模型设定我们希望它具备的人设如一个个人知识库助手等。System Prompt 一般在一个会话中仅有一个。在通过 System Prompt 设定好模型的人设或是初始设置后，我们可以通过 User Prompt 给出模型需要遵循的指令。例如，当我们需要一个幽默风趣的个人知识库助手，并向这个助手提问我今天有什么事时，可以如下地构造 Prompt：
+
+```json
+{
+    "system prompt":"你是一个幽默风趣的个人知识库助手，可以根据给定的知识库内容回答用户的提问，注意，你的回答风格应是幽默风趣的",
+    "user prompt":"我今天有什么事务？"
+}
+```
+
+通过如上 Prompt 的构造，我们可以让模型以幽默风趣的风格回答用户提出的问题。注意，如果有多个用户问题，那么我们只需要添加对应数量的 User Prompt 即可，System Prompt 仅需构造一个。
