--- a/notebook/C2 调用大模型 API/3. 调用百度文心.ipynb
+++ b/notebook/C2 调用大模型 API/3. 调用百度文心.ipynb
@@ -289,73 +289,82 @@
    "source": [
     "我们同样可以通过 LangChain 框架来调用百度文心大模型，以将文心模型接入到我们的应用框架中。\n",
     "\n",
-    "但是，原生的 LangChain 是不支持文心调用的，我们需要安装文心的 LangChain 插件："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "bat"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pip install langchain-wenxin"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "LangChain-wenxin 封装了两层秘钥认证的细节，我们可以直接全局配置文心的两个秘钥即可："
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!export BAIDU_API_KEY=\"<你的百度api key>\"                            \n",
-    "!export BAIDU_SECRET_KEY=\"<你的百度securet key>\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "接下来，类似于基于 LangChain 调用 ChatGPT，我们可以实例化一个 LLM 对象并基于此调用文心大模型："
+    "但是，原生的 LangChain 是不支持文心调用的，我们需要自定义一个支持文心模型调用的 LLM。在《附一 LangChain自定义LLM》中，我们简述了如何自定义 LLM。\n",
+    "\n",
+    "此处，我们可以直接调用已自定义好的 Wenxin_LLM。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wenxin_llm import Wenxin_LLM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们希望像调用 ChatGPT 那样直接将秘钥存储在 .env 文件中，并将其加载到环境变量，从而隐藏秘钥的具体细节，保证安全性。因此，我们需要在 .env 文件中配置 `wenxin_api_key` 和 `wenxin_secret_key`，并使用以下代码加载："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# 读取本地/项目的环境变量。\n",
+    "\n",
+    "# find_dotenv()寻找并定位.env文件的路径\n",
+    "# load_dotenv()读取该.env文件，并将其中的环境变量加载到当前的运行环境中\n",
+    "# 如果你设置的是全局的环境变量，这行代码则没有任何作用。\n",
+    "_ = load_dotenv(find_dotenv())\n",
+    "\n",
+    "# 获取环境变量 OPENAI_API_KEY\n",
+    "wenxin_api_key = os.environ[\"wenxin_api_key\"]\n",
+    "wenxin_secret_key = os.environ[\"wenxin_secret_key\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = Wenxin_LLM(api_key=wenxin_api_key, secret_key=wenxin_secret_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "PydanticUserError",
-     "evalue": "If you use `@root_validator` with pre=False (the default) you MUST specify `skip_on_failure=True`. Note that `@root_validator` is deprecated and should be replaced with `@model_validator`.\n\nFor further information visit https://errors.pydantic.dev/2.3/u/root-validator-pre-skip",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mPydanticUserError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/logan/project/Tutorial_for_developing_LLM_application/notebook/C2 调用大模型 API/3. 调用百度文心.ipynb 单元格 31\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Blab/home/logan/project/Tutorial_for_developing_LLM_application/notebook/C2%20%E8%B0%83%E7%94%A8%E5%A4%A7%E6%A8%A1%E5%9E%8B%20API/3.%20%E8%B0%83%E7%94%A8%E7%99%BE%E5%BA%A6%E6%96%87%E5%BF%83.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain_wenxin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mchat_models\u001b[39;00m \u001b[39mimport\u001b[39;00m ChatWenxin\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blab/home/logan/project/Tutorial_for_developing_LLM_application/notebook/C2%20%E8%B0%83%E7%94%A8%E5%A4%A7%E6%A8%A1%E5%9E%8B%20API/3.%20%E8%B0%83%E7%94%A8%E7%99%BE%E5%BA%A6%E6%96%87%E5%BF%83.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mschema\u001b[39;00m \u001b[39mimport\u001b[39;00m HumanMessage\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blab/home/logan/project/Tutorial_for_developing_LLM_application/notebook/C2%20%E8%B0%83%E7%94%A8%E5%A4%A7%E6%A8%A1%E5%9E%8B%20API/3.%20%E8%B0%83%E7%94%A8%E7%99%BE%E5%BA%A6%E6%96%87%E5%BF%83.ipynb#X53sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m llm \u001b[39m=\u001b[39m ChatWenxin()\n",
-      "File \u001b[0;32m~/.conda/envs/zyh_llm/lib/python3.9/site-packages/langchain_wenxin/__init__.py:5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# SPDX-FileCopyrightText: 2023-present Tao Yang <swulling@gmail.com>\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# SPDX-License-Identifier: MIT\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain_wenxin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mchat_models\u001b[39;00m \u001b[39mimport\u001b[39;00m ChatWenxin  \u001b[39m# noqa: F401\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain_wenxin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclient\u001b[39;00m \u001b[39mimport\u001b[39;00m WenxinClient  \u001b[39m# noqa: F401\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain_wenxin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39membeddings\u001b[39;00m \u001b[39mimport\u001b[39;00m WenxinEmbeddings  \u001b[39m# noqa: F401\u001b[39;00m\n",
-      "File \u001b[0;32m~/.conda/envs/zyh_llm/lib/python3.9/site-packages/langchain_wenxin/chat_models.py:23\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mschema\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moutput\u001b[39;00m \u001b[39mimport\u001b[39;00m ChatGenerationChunk\n\u001b[1;32m     21\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydantic\u001b[39;00m \u001b[39mimport\u001b[39;00m Extra\n\u001b[0;32m---> 23\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain_wenxin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mllms\u001b[39;00m \u001b[39mimport\u001b[39;00m BaiduCommon\n\u001b[1;32m     26\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mChatWenxin\u001b[39;00m(BaseChatModel, BaiduCommon):\n\u001b[1;32m     27\u001b[0m \u001b[39m    \u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\"\"Wrapper around Baidu Wenxin's large language model.\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \n\u001b[1;32m     29\u001b[0m \u001b[39m    To use, you should have the environment variable ``BAIDU_API_KEY`` and\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[39m            response = model(\"What are the biggest risks facing humanity?\")\u001b[39;00m\n\u001b[1;32m     40\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
-      "File \u001b[0;32m~/.conda/envs/zyh_llm/lib/python3.9/site-packages/langchain_wenxin/llms.py:20\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlangchain_wenxin\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclient\u001b[39;00m \u001b[39mimport\u001b[39;00m WenxinClient\n\u001b[1;32m     17\u001b[0m logger \u001b[39m=\u001b[39m logging\u001b[39m.\u001b[39mgetLogger(\u001b[39m__name__\u001b[39m)\n\u001b[0;32m---> 20\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mBaiduCommon\u001b[39;00m(BaseModel):\n\u001b[1;32m     21\u001b[0m     client: Any \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m#: :meta private:\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     model: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mernie-bot\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "File \u001b[0;32m~/.conda/envs/zyh_llm/lib/python3.9/site-packages/langchain_wenxin/llms.py:52\u001b[0m, in \u001b[0;36mBaiduCommon\u001b[0;34m()\u001b[0m\n\u001b[1;32m     49\u001b[0m baidu_secret_key: Optional[\u001b[39mstr\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     50\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Baidu Cloud secret key.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 52\u001b[0m \u001b[39m@root_validator\u001b[39m()\n\u001b[1;32m     53\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mvalidate_environment\u001b[39m(\u001b[39mcls\u001b[39m, values: Dict) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Dict:  \u001b[39m# noqa: N805\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Validate that api key and python package exists in environment.\"\"\"\u001b[39;00m\n\u001b[1;32m     55\u001b[0m     baidu_api_key \u001b[39m=\u001b[39m get_from_dict_or_env(\n\u001b[1;32m     56\u001b[0m         values, \u001b[39m\"\u001b[39m\u001b[39mbaidu_api_key\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mBAIDU_API_KEY\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     57\u001b[0m     )\n",
-      "File \u001b[0;32m~/.conda/envs/zyh_llm/lib/python3.9/site-packages/pydantic/deprecated/class_validators.py:228\u001b[0m, in \u001b[0;36mroot_validator\u001b[0;34m(pre, skip_on_failure, allow_reuse, *__args)\u001b[0m\n\u001b[1;32m    226\u001b[0m mode: Literal[\u001b[39m'\u001b[39m\u001b[39mbefore\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mafter\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mbefore\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m pre \u001b[39mis\u001b[39;00m \u001b[39mTrue\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mafter\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    227\u001b[0m \u001b[39mif\u001b[39;00m pre \u001b[39mis\u001b[39;00m \u001b[39mFalse\u001b[39;00m \u001b[39mand\u001b[39;00m skip_on_failure \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m--> 228\u001b[0m     \u001b[39mraise\u001b[39;00m PydanticUserError(\n\u001b[1;32m    229\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mIf you use `@root_validator` with pre=False (the default) you MUST specify `skip_on_failure=True`.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    230\u001b[0m         \u001b[39m'\u001b[39m\u001b[39m Note that `@root_validator` is deprecated and should be replaced with `@model_validator`.\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m    231\u001b[0m         code\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mroot-validator-pre-skip\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m    232\u001b[0m     )\n\u001b[1;32m    234\u001b[0m wrap \u001b[39m=\u001b[39m partial(_decorators_v1\u001b[39m.\u001b[39mmake_v1_generic_root_validator, pre\u001b[39m=\u001b[39mpre)\n\u001b[1;32m    236\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdec\u001b[39m(f: Callable[\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m, Any] \u001b[39m|\u001b[39m \u001b[39mclassmethod\u001b[39m[Any, Any, Any] \u001b[39m|\u001b[39m \u001b[39mstaticmethod\u001b[39m[Any, Any]) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Any:\n",
-      "\u001b[0;31mPydanticUserError\u001b[0m: If you use `@root_validator` with pre=False (the default) you MUST specify `skip_on_failure=True`. Note that `@root_validator` is deprecated and should be replaced with `@model_validator`.\n\nFor further information visit https://errors.pydantic.dev/2.3/u/root-validator-pre-skip"
-     ]
+     "data": {
+      "text/plain": [
+       "'您好！我是百度研发的知识增强大语言模型，中文名是文心一言，英文名是ERNIE Bot。我能够与人对话互动，回答问题，协助创作，高效便捷地帮助人们获取信息、知识和灵感。'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_wenxin.chat_models import ChatWenxin\n",
-    "from langchain.schema import HumanMessage\n",
-    "llm = ChatWenxin()\n",
-    "print(llm([HumanMessage(content=\"你好\")]))"
+    "llm(\"你好\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "从而我们可以将文心大模型加入到 LangChain 架构中，实现在应用中对文心大模型的调用。"
    ]
   }
  ],
