--- a/notebook/C2 调用大模型 API/4. 调用讯飞星火.ipynb
+++ b/notebook/C2 调用大模型 API/4. 调用讯飞星火.ipynb
@@ -93,9 +93,9 @@
    "source": [
     "import SparkApi\n",
     "#以下密钥信息从控制台获取\n",
-    "appid = \"9f922c84\"     #填写控制台中获取的 APPID 信息\n",
-    "api_secret = \"YjU0ODk4MWQ4NTgyNDU5MzNiNWQzZmZm\"   #填写控制台中获取的 APISecret 信息\n",
-    "api_key =\"5d4e6e41f6453936ccc34dd524904324\"    #填写控制台中获取的 APIKey 信息\n",
+    "appid = \"\"     #填写控制台中获取的 APPID 信息\n",
+    "api_secret = \"\"   #填写控制台中获取的 APISecret 信息\n",
+    "api_key =\"\"    #填写控制台中获取的 APIKey 信息\n",
     "\n",
     "#用于配置大模型版本，默认“general/generalv2”\n",
     "domain = \"general\"   # v1.5版本\n",
@@ -234,7 +234,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "api_url = \"http://127.0.0.1:8002/spark\"\n",
+    "api_url = \"http://127.0.0.1:8000/spark\"\n",
     "headers = {\"Content-Type\": \"application/json\"}\n",
     "data = {\n",
     "    \"prompt\" : \"你好\",\n",
@@ -260,7 +260,7 @@
    "source": [
     "def get_completion_spark(prompt, temperature = 0.1, max_tokens = 4096):\n",
     "\n",
-    "    api_url = \"http://127.0.0.1:8002/spark\"\n",
+    "    api_url = \"http://127.0.0.1:8000/spark\"\n",
     "    headers = {\"Content-Type\": \"application/json\"}\n",
     "    data = {\n",
     "        \"prompt\" : prompt,\n",
