--- a/notebook/C1 大模型简介/1. 什么是⼤模型.md
+++ b/notebook/C1 大模型简介/1. 什么是⼤模型.md
@@ -1,46 +1,37 @@
 
-# 什么是LLM（大语言模型）？
+# 一. 什么是LLM（大语言模型）？
 
-`语言`，是人类用来交流和表达思想的强大工具。但让机器像人类一样理解和使用语言一直是一项巨大的挑战，这通常需要依赖强大的人工智能算法。实现让机器像人类一样阅读、写作和交流的目标，一直是一个长期的研究挑战。
+## 1. 发展历程
 
-在过去的几十年里，研究人员不断努力，试图让计算机更聪明地处理语言。而`语言建模（LM）`就是让机器更加智能的理解人类语言的一种方法。一般来说，LM 旨在对词序列的生成概率进行建模，以预测未来（或缺失）tokens 的概率。首先，让我们来看看 LM 是如何发展起来的。
+语言建模的研究始于`20世纪90年代`，最初采用了统计学习方法，通过前面的词汇来预测下一个词汇。然而，这种方法在理解复杂语言规则方面存在一定局限性。
 
-## LM的发展历程
+随后，研究人员不断尝试改进，其中在`2003年`，深度学习先驱**Bengio**在他的经典论文《A Neural Probabilistic Language Model》中，首次将深度学习的思想融入到语言模型中，使用了更强大的**神经网络模型**，这相当于为计算机提供了更强大的"大脑"来理解语言。这种方法让模型可以更好地捕捉语言中的复杂关系，虽然这一步很重要，但仍有改进的空间。
 
-语言建模的研究历程可以分为四个主要阶段：
+大约在`2018年左右`，研究人员引入了**Transformer架构的神经网络模型**，通过大量文本数据训练这些模型，使它们能够通过阅读大量文本来深入理解语言规则和模式，就像让计算机阅读整个互联网一样。所以它对语言有了更深刻的理解。这种方法在很多任务上表现得非常好。
 
-### 1.统计语言模型（SLM）
+与此同时，研究人员发现，随着语言模型规模的扩大（增加模型大小或使用更多数据），模型展现出了一些惊人的能力，通常在各种任务中表现显著提升。这时我们进入了大语言模型（LLM）时代。
 
-统计语言模型 (SLM)： SLMs 基于统计学习方法开发，并在 20 世纪 90 年代兴起。其基本思想是基于马尔可夫假设建立词预测模型，例如根据最近的上下文预测下一个词。具有固定上下文长度 n 的 SLM 也称为 n 元语言模型，例如 bigram 和 trigram 语言模型
+## 2. 大语言模型的概念
 
-在这个阶段，计算机学习了一种非常基本的技能：根据前面的词汇来预测下一个词汇。这有点像在拼字游戏中猜测下一个字母是什么。但是，这种方法有点局限，因为它无法理解更复杂的语言规则。另外，它们通常受到维数灾难的困扰：由于需要估计指数级数量的转换概率，因此很难准确估计高阶语言模型。
+**大语言模型（英文：Large Language Model，缩写LLM），也称大型语言模型，是一种人工智能模型，旨在理解和生成人类语言**。
 
-### 2.神经语言模型（NLM）
+通常，大语言模型 (LLM) 指包含**数百亿（或更多）参数的语言模型**，这些模型在大量的文本数据上进行训练，例如国外的有GPT-3 、GPT-4、PaLM 、Galactica 和 LLaMA 等，国内的有ChatGLM、文心一言、通义千问、讯飞星火等。
 
-然后，研究人员尝试了一种更聪明的方法，使用了神经网络，如循环神经网络（RNN）、长短期记忆网络（LSTM等），来描述单词序列的概率。作为一个显著贡献的工作是引入了词的分布式表示这一概念，并在聚合上下文特征（即分布式词向量）的条件下构建词预测函数。
+在这个阶段，计算机的“大脑”变得非常巨大，拥有数十亿甚至数千亿的参数。这就像是将计算机的大脑升级到了一个巨型超级计算机。这让计算机可以在各种任务上表现得非常出色，有时甚至比人类还要聪明。
 
-这就像给计算机一个更大的大脑来理解语言。这种方法让计算机可以更好地捕捉语言中的复杂关系，但还有改进的空间。
+为了探索性能的极限，许多研究人员开始训练越来越庞大的语言模型 ，例如拥有1750亿参数的 GPT-3 和5400亿参数的 PaLM 。尽管这些大型语言模型与小型语言模型（例如 BERT 的3.3亿参数和 GPT-2 的15亿参数）使用相似的架构和预训练任务，但它们展现出截然不同的能力，尤其在解决复杂任务时表现出了惊人的潜力，这被称为“**涌现能力**”。以 GPT-3 和 GPT-2 为例，GPT-3 可以通过学习上下文来解决少样本任务，而 GPT-2 在这方面表现较差。因此，研究界给这些庞大的语言模型起了个名字，称之为“大语言模型（LLM）”。而 LLM 的一个杰出应用就是 **ChatGPT** ，它是 GPT 系列 LLM 用于与人类对话式应用的大胆尝试，展现出了非常流畅和自然的表现。
 
-### 3.预训练语言模型（PLM）
 
-接下来，研究人员开始使用大量的文本数据来“教育”计算机。他们让计算机通过阅读大量文本来学习语言的规则和模式。这就像让计算机阅读了整个互联网，所以它对语言有了更深刻的理解。这种方法在很多任务上表现得非常好。
-
-早期尝试包括ELMo，它通过预训练双向 LSTM 网络来获取上下文感知的单词表示，然后通过微调网络以适应特定下游任务。随后，基于自注意力机制的 Transformer 架构，如 BERT 作为双向语言模型在大规模无标签语料库上进行预训练。这些上下文感知的词表示作为通用语义特征非常有效，极大提高了NLP任务的性能。BERT这项研究也激发了大量的后续研究，奠定了“预训练和微调”学习范式。遵循这种范式，后续的研究又引入了不同的架构（例如GPT-2和BART）或改进的预训练策略，通常都需要针对具体任务进行微调。
-
-### 4.大语言模型（LLM）
-
-最后，我们来到了 LLM 阶段。在这个阶段，计算机的“大脑”变得非常巨大，拥有数十亿甚至数千亿的参数。这就像是将计算机的大脑升级到了一个巨型超级计算机。这让计算机可以在各种任务上表现得非常出色，有时甚至比人类还要聪明。
-
-研究人员发现，扩大预训练语言模型（PLM）的规模（比如增加模型大小或使用更多数据）通常会显著提升模型在各种任务中的表现。为了探索性能的极限，许多研究人员开始训练越来越庞大的 PLM ，例如拥有1750亿参数的 GPT-3 和5400亿参数的 PaLM 。尽管这些大型 PLM 与小型 PLM（例如 BERT 的3.3亿参数和 GPT-2 的15亿参数）使用相似的架构和预训练任务，但它们展现出截然不同的能力，尤其在解决复杂任务时表现出了惊人的潜力，这被称为“涌现能力”。以 GPT-3 和 GPT-2 为例，GPT-3 可以通过学习上下文来解决少样本任务，而 GPT-2 在这方面表现较差。因此，研究界给这些庞大的PLM 起了个名字，称之为“大语言模型（LLM）”。而 LLM 的一个杰出应用就是 ChatGPT ，它是 GPT 系列 LLM 用于与人类对话式应用的大胆尝试，展现出了非常流畅和自然的表现。
-
-通常，大语言模型 (LLM) 指包含数百亿（或更多）参数的语
-言模型，这些模型在大量的文本数据上进行训练，例如国外的有
-GPT-3 、GPT-4、PaLM 、Galactica 和 LLaMA 等，国内的有ChatGLM、文心一言、通义千问、讯飞星火等。
 
 ### LLM的应用和影响
 
-LLM已经在许多领域产生了深远的影响。在自然语言处理领域，它可以帮助计算机更好地理解和生成文本，包括写文章、回答问题、翻译语言等。在信息检索领域，它可以改进搜索引擎，让我们更轻松地找到所需的信息。在计算机视觉领域，研究人员还在努力让计算机理解图像和文字，以改善多媒体交互。
+LLM已经在许多领域产生了深远的影响。在**自然语言处理**领域，它可以帮助计算机更好地理解和生成文本，包括写文章、回答问题、翻译语言等。在**信息检索**领域，它可以改进搜索引擎，让我们更轻松地找到所需的信息。在**计算机视觉**领域，研究人员还在努力让计算机理解图像和文字，以改善多媒体交互。
 
-最重要的是，LLM的出现让人们重新思考了通用人工智能（AGI）的可能性。AGI 是一种像人类一样思考和学习的人工智能。LLM 被认为是 AGI 的一种早期形式，这引发了对未来人工智能发展的许多思考和计划。
+最重要的是，LLM的出现让人们重新思考了**通用人工智能（AGI）**的可能性。AGI 是一种像人类一样思考和学习的人工智能。LLM 被认为是 AGI 的一种早期形式，这引发了对未来人工智能发展的许多思考和计划。
 
 总之，LLM 是一种令人兴奋的技术，它让计算机更好地理解和使用语言，正在改变着我们与技术互动的方式，同时也引发了对未来人工智能的无限探索。希望这篇文章让你对LLM有了更清晰的认识！
+
+
+
+【**参考内容**】：
+https://arxiv.org/abs/2303.18223
