--- a/notebook/C1 大模型简介/3. 常⻅⼤模型.md
+++ b/notebook/C1 大模型简介/3. 常⻅⼤模型.md
@@ -97,7 +97,7 @@ PaLM2的几大突破：
 
 基于代码和多模态能力的发布，**智能编程助手iFlyCode1.0** 和 **讯飞智作2.0** 两款应用产品也在发布会上发布，进一步解放编程和内容生产力。同时，讯飞和华为还联合重磅发布了国内首款支持大模型训练私有化的全国产化产品“**星火一体机**”，可支持企业快速实现讯飞星火大模型的私有化部署、场景赋能和专属大模型训练优化。
 
-![](../../figures/星火.PNG)
+![](../../figures/星火.png)
 
 
 [使用地址](https://xinghuo.xfyun.cn)
