--- a/notebook/C6 验证迭代/3. 大模型评估方法.ipynb
+++ b/notebook/C6 验证迭代/3. 大模型评估方法.ipynb
@@ -13,7 +13,36 @@
    "source": [
     "在上一部分中，我们介绍了如何找到并通过针对性优化 Prompt 来解决 Bad Cases，从而优化系统的表现。我们会将找到的每一个 Bad Case 都加入到我们的验证集中，每一次优化 Prompt 之后，我们会重新对验证集中所有验证案例进行验证，从而保证优化后的 Prompt 不会在原有 Good Case 上失去能力或表现降级。当验证集体量较小时，我们可以采用人工评估的方法，即对验证集中的每一个验证案例，人工评估系统输出的优劣；但是，当验证集随着系统的优化而不断扩张，其体量会不断增大，以至于人工评估的时间和人力成本扩大到我们无法接受的程度。因此，我们需要采用自动评估的方法，自动评估系统对每一个验证案例的输出质量，从而评估系统的整体性能。\n",
     "\n",
-    "在本节中，我们将首先介绍人工评估的一般思路以供参考，接着深入介绍大模型自动评估的一般方法，并在本系统上进行实际验证，全面评估本系统表现，为系统的进一步优化迭代做准备。"
+    "在本节中，我们将首先介绍人工评估的一般思路以供参考，接着深入介绍大模型自动评估的一般方法，并在本系统上进行实际验证，全面评估本系统表现，为系统的进一步优化迭代做准备。同样，在正式开始之前，我们先加载我们的向量数据库与检索链："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.vectorstores import Chroma\n",
+    "from langchain.embeddings.openai import OpenAIEmbeddings    # 调用 OpenAI 的 Embeddings 模型\n",
+    "import openai\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "import os\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv()) # read local .env file\n",
+    "openai.api_key = os.environ['OPENAI_API_KEY']\n",
+    "\n",
+    "# 定义 Embeddings\n",
+    "embedding = OpenAIEmbeddings() \n",
+    "\n",
+    "# 向量数据库持久化路径\n",
+    "persist_directory = '../knowledge_base/chroma'\n",
+    "\n",
+    "# 加载数据库\n",
+    "vectordb = Chroma(\n",
+    "    persist_directory=persist_directory,  # 允许我们将persist_directory目录保存到磁盘上\n",
+    "    embedding_function=embedding\n",
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -51,16 +80,104 @@
     "\n",
     "② 应该如何使用南瓜书？\n",
     "\n",
-    "接下来我们分别用版本 A 的 prompt 与版本 B 的 prompt 来要求模型做出回答："
+    "接下来我们分别用版本A prompt（简明扼要） 与版本B prompt（详细具体） 来要求模型做出回答："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "问题一：\n",
+      "南瓜书是对西瓜书的补充和解析，旨在帮助读者更好地理解西瓜书中的公式和推导细节。谢谢你的提问！\n",
+      "问题二：\n",
+      "最佳使用方法是以西瓜书为主线，遇到自己推导不出来或者看不懂的公式时再来查阅南瓜书。谢谢你的提问！\n"
+     ]
+    }
+   ],
    "source": [
-    "'''留待补充'''"
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "template_v1 = \"\"\"使用以下上下文来回答最后的问题。如果你不知道答案，就说你不知道，不要试图编造答\n",
+    "案。最多使用三句话。尽量使答案简明扼要。总是在回答的最后说“谢谢你的提问！”。\n",
+    "{context}\n",
+    "问题: {question}\n",
+    "有用的回答:\"\"\"\n",
+    "\n",
+    "QA_CHAIN_PROMPT = PromptTemplate(input_variables=[\"context\",\"question\"],\n",
+    "                                 template=template_v1)\n",
+    "\n",
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "llm = ChatOpenAI(model_name = \"gpt-3.5-turbo\", temperature = 0 )\n",
+    "\n",
+    "qa_chain = RetrievalQA.from_chain_type(llm,\n",
+    "                                       retriever=vectordb.as_retriever(),\n",
+    "                                       return_source_documents=True,\n",
+    "                                       chain_type_kwargs={\"prompt\":QA_CHAIN_PROMPT})\n",
+    "\n",
+    "print(\"问题一：\")\n",
+    "question = \"南瓜书和西瓜书有什么关系？\"\n",
+    "result = qa_chain({\"query\": question})\n",
+    "print(result[\"result\"])\n",
+    "\n",
+    "print(\"问题二：\")\n",
+    "question = \"应该如何使用南瓜书？\"\n",
+    "result = qa_chain({\"query\": question})\n",
+    "print(result[\"result\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上述是版本A Prompt 的回答，我们再测试版本B："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "问题一：\n",
+      "南瓜书是对周志华老师的《机器学习》（西瓜书）的补充和解析。南瓜书的内容是以西瓜书的内容为基础进行表述的，主要对西瓜书中一些难以理解的公式进行解析，并补充了一些公式的推导细节。南瓜书的目的是帮助读者更好地理解和学习机器学习，特别是对那些想深入研究公式推导细节的读者来说，提供更详细的解释和推导过程。因此，南瓜书可以看作是对西瓜书的补充和扩展，帮助读者更好地掌握机器学习的基础知识。\n",
+      "问题二：\n",
+      "南瓜书的最佳使用方法是以西瓜书为主线，遇到自己推导不出来或者看不懂的公式时再来查阅南瓜书。对于初学机器学习的小白，建议简单过一下西瓜书第1章和第2章的公式，等学得有点飘的时候再回来深入学习。南瓜书的内容都是以西瓜书的内容为前置知识进行表述的，所以需要先掌握西瓜书的内容。南瓜书的目的是对西瓜书中比较难理解的公式进行解析，并补充具体的推导细节。如果在南瓜书中没有你想要查阅的公式，或者发现南瓜书中的错误，可以在GitHub的Issues中进行反馈。南瓜书的编写者通常会在24小时内回复，并提供补充的公式编号或勘误信息。此外，南瓜书还提供了配套的视频教程和在线阅读地址，以及最新版PDF获取地址。最后，南瓜书的使用方法是根据个人的学习进度和需求来决定，可以根据自己的情况选择性地阅读和学习。\n"
+     ]
+    }
+   ],
+   "source": [
+    "template_v2 = \"\"\"使用以下上下文来回答最后的问题。如果你不知道答案，就说你不知道，不要试图编造答\n",
+    "案。你应该使答案尽可能详细具体，但不要偏题。如果答案比较长，请酌情进行分段，以提高答案的阅读体验。\n",
+    "{context}\n",
+    "问题: {question}\n",
+    "有用的回答:\"\"\"\n",
+    "\n",
+    "QA_CHAIN_PROMPT = PromptTemplate(input_variables=[\"context\",\"question\"],\n",
+    "                                 template=template_v2)\n",
+    "\n",
+    "qa_chain = RetrievalQA.from_chain_type(llm,\n",
+    "                                       retriever=vectordb.as_retriever(),\n",
+    "                                       return_source_documents=True,\n",
+    "                                       chain_type_kwargs={\"prompt\":QA_CHAIN_PROMPT})\n",
+    "\n",
+    "print(\"问题一：\")\n",
+    "question = \"南瓜书和西瓜书有什么关系？\"\n",
+    "result = qa_chain({\"query\": question})\n",
+    "print(result[\"result\"])\n",
+    "\n",
+    "print(\"问题二：\")\n",
+    "question = \"应该如何使用南瓜书？\"\n",
+    "result = qa_chain({\"query\": question})\n",
+    "print(result[\"result\"])"
    ]
   },
   {
@@ -105,27 +222,77 @@
     "\n",
     "⑦ 智能性。该维度评估系统回答是否拟人化、智能化，是否能充分让用户混淆人工回答与智能回答。该维度可以在0~1之间任意打分。\n",
     "\n",
-    "以下做出评估示例："
+    "例如，我们针对以下回答进行评估："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'待添加'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "问题：\n",
+      "应该如何使用南瓜书？\n",
+      "模型回答：\n",
+      "南瓜书的最佳使用方法是以西瓜书为主线，遇到自己推导不出来或者看不懂的公式时再来查阅南瓜书。对于初学机器学习的小白，建议简单过一下西瓜书第1章和第2章的公式，等学得有点飘的时候再回来深入学习。南瓜书的内容都是以西瓜书的内容为前置知识进行表述的，所以需要先掌握西瓜书的内容。南瓜书的目的是对西瓜书中比较难理解的公式进行解析，并补充具体的推导细节。如果在南瓜书中没有你想要查阅的公式，或者发现南瓜书中有错误，可以在GitHub的Issues中进行反馈。南瓜书的编写者通常会在24小时内回复，并提供补充的公式编号或勘误信息。此外，南瓜书还提供了配套的视频教程和在线阅读地址，以及最新版PDF获取地址。最后，南瓜书的使用方法是根据个人的学习进度和需求来决定，可以根据自己的情况选择性地阅读和学习。\n"
+     ]
     }
    ],
    "source": [
-    "'''待添加'''"
+    "print(\"问题：\")\n",
+    "question = \"应该如何使用南瓜书？\"\n",
+    "print(question)\n",
+    "print(\"模型回答：\")\n",
+    "result = qa_chain({\"query\": question})\n",
+    "print(result[\"result\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以下是系统查找到的知识片段："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Document(page_content='下学生”。\\n使用说明\\n• 南瓜书的所有内容都是以西瓜书的内容为前置知识进行表述的，所以南瓜书的最佳使用方法是以西瓜书\\n为主线，遇到自己推导不出来或者看不懂的公式时再来查阅南瓜书；\\n• 对于初学机器学习的小白，西瓜书第 1 章和第 2 章的公式强烈不建议深究，简单过一下即可，等你学得\\n有点飘的时候再回来啃都来得及；\\n• 每个公式的解析和推导我们都力 (zhi) 争 (neng) 以本科数学基础的视角进行讲解，所以超纲的数学知识\\n我们通常都会以附录和参考文献的形式给出，感兴趣的同学可以继续沿着我们给的资料进行深入学习；\\n• 若南瓜书里没有你想要查阅的公式，或者你发现南瓜书哪个地方有错误，请毫不犹豫地去我们 GitHub 的\\nIssues（地址：https://github.com/datawhalechina/pumpkin-book/issues）进行反馈，在对应版块\\n提交你希望补充的公式编号或者勘误信息，我们通常会在 24 小时以内给您回复，超过 24 小时未回复的\\n话可以微信联系我们（微信号：at-Sm1les）；', metadata={'source': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'file_path': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'page': 1, 'total_pages': 196, 'format': 'PDF 1.5', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': 'LaTeX with hyperref', 'producer': 'xdvipdfmx (20200315)', 'creationDate': \"D:20230303170709-00'00'\", 'modDate': '', 'trapped': ''}), Document(page_content='前言\\n“周志华老师的《机器学习》（西瓜书）是机器学习领域的经典入门教材之一，周老师为了使尽可能多的读\\n者通过西瓜书对机器学习有所了解, 所以在书中对部分公式的推导细节没有详述，但是这对那些想深究公式推\\n导细节的读者来说可能“不太友好”，本书旨在对西瓜书里比较难理解的公式加以解析，以及对部分公式补充\\n具体的推导细节。”\\n读到这里，大家可能会疑问为啥前面这段话加了引号，因为这只是我们最初的遐想，后来我们了解到，周\\n老师之所以省去这些推导细节的真实原因是，他本尊认为“理工科数学基础扎实点的大二下学生应该对西瓜书\\n中的推导细节无困难吧，要点在书里都有了，略去的细节应能脑补或做练习”。所以...... 本南瓜书只能算是我\\n等数学渣渣在自学的时候记下来的笔记，希望能够帮助大家都成为一名合格的“理工科数学基础扎实点的大二\\n下学生”。\\n使用说明\\n• 南瓜书的所有内容都是以西瓜书的内容为前置知识进行表述的，所以南瓜书的最佳使用方法是以西瓜书\\n为主线，遇到自己推导不出来或者看不懂的公式时再来查阅南瓜书；\\n• 对于初学机器学习的小白，西瓜书第 1 章和第 2 章的公式强烈不建议深究，简单过一下即可，等你学得', metadata={'source': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'file_path': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'page': 1, 'total_pages': 196, 'format': 'PDF 1.5', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': 'LaTeX with hyperref', 'producer': 'xdvipdfmx (20200315)', 'creationDate': \"D:20230303170709-00'00'\", 'modDate': '', 'trapped': ''}), Document(page_content='提交你希望补充的公式编号或者勘误信息，我们通常会在 24 小时以内给您回复，超过 24 小时未回复的\\n话可以微信联系我们（微信号：at-Sm1les）；\\n配套视频教程：https://www.bilibili.com/video/BV1Mh411e7VU\\n在线阅读地址：https://datawhalechina.github.io/pumpkin-book（仅供第 1 版）\\n最新版 PDF 获取地址：https://github.com/datawhalechina/pumpkin-book/releases\\n编委会\\n主编：Sm1les、archwalker、jbb0523\\n编委：juxiao、Majingmin、MrBigFan、shanry、Ye980226\\n封面设计：构思-Sm1les、创作-林王茂盛\\n致谢\\n特别感谢 awyd234、feijuan、Ggmatch、Heitao5200、huaqing89、LongJH、LilRachel、LeoLRH、Nono17、\\nspareribs、sunchaothu、StevenLzq 在最早期的时候对南瓜书所做的贡献。', metadata={'source': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'file_path': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'page': 1, 'total_pages': 196, 'format': 'PDF 1.5', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': 'LaTeX with hyperref', 'producer': 'xdvipdfmx (20200315)', 'creationDate': \"D:20230303170709-00'00'\", 'modDate': '', 'trapped': ''}), Document(page_content='致谢\\n特别感谢 awyd234、feijuan、Ggmatch、Heitao5200、huaqing89、LongJH、LilRachel、LeoLRH、Nono17、\\nspareribs、sunchaothu、StevenLzq 在最早期的时候对南瓜书所做的贡献。\\n扫描下方二维码，然后回复关键词“南瓜书”，即可加入“南瓜书读者交流群”\\n版权声明\\n本作品采用知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议进行许可。', metadata={'source': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'file_path': '../knowledge_base/pumkin_book/pumpkin_book.pdf', 'page': 1, 'total_pages': 196, 'format': 'PDF 1.5', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': 'LaTeX with hyperref', 'producer': 'xdvipdfmx (20200315)', 'creationDate': \"D:20230303170709-00'00'\", 'modDate': '', 'trapped': ''})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result[\"source_documents\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们做出相应评估：\n",
+    "\n",
+    "① 知识查找正确性——1\n",
+    "\n",
+    "② 回答一致性——0.8（解答了问题，但是类似于“反馈”的话题偏题了）\n",
+    "\n",
+    "③ 回答幻觉比例——1\n",
+    "\n",
+    "④ 回答正确性——0.8（理由同上）\n",
+    "\n",
+    "⑤ 逻辑性——0.7（后续内容与前面逻辑连贯性不强）\n",
+    "\n",
+    "⑥ 通顺性——0.6（最后总结啰嗦且无效）\n",
+    "\n",
+    "⑦ 智能性——0.5（具有 AI 回答的显著风格）"
    ]
   },
   {
@@ -170,23 +337,7 @@
     "\n",
     "    【多项选择题】南瓜书的作者是谁？   A 周志明 B 谢文睿 C 秦州 D 贾彬彬\n",
     "\n",
-    "要求模型回答该客观题，我们给定标准答案为 BCD，将模型给出答案与标准答案对比即可实现评估打分。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''待补充'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "根据以上思想，我们可以构造出一个 Prompt 问题模板："
+    "要求模型回答该客观题，我们给定标准答案为 BCD，将模型给出答案与标准答案对比即可实现评估打分。根据以上思想，我们可以构造出一个 Prompt 问题模板："
    ]
   },
   {
@@ -496,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,6 +670,7 @@
     "\n",
     "⑦ 智能性。该维度评估系统回答是否拟人化、智能化，是否能充分让用户混淆人工回答与智能回答。打分分值在0~1之间，0为非常明显的模型回答，1为与人工回答高度一致。\n",
     "\n",
+    "你应该是比较严苛的评估员，很少给出满分的高评估。\n",
     "用户问题：\n",
     "```\n",
     "{}\n",
@@ -531,8 +683,66 @@
     "```\n",
     "{}\n",
     "```\n",
-    "你应该返回给我一个可解析的 Python 字典，字典的键是如上维度，值是每一个维度对应的评估打分。\n",
+    "你应该返回给我一个可直接解析的 Python 字典，字典的键是如上维度，值是每一个维度对应的评估打分。\n",
+    "不要输出任何其他内容。\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们可以实际测试一下其效果："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义一个 OpenAI 的原生接口\n",
+    "import openai\n",
+    "# 一个封装 OpenAI 接口的函数，参数为 Prompt，返回对应结果\n",
+    "def get_completion(prompt, model=\"gpt-4\", temperature = 0):\n",
+    "    '''\n",
+    "    prompt: 对应的提示词\n",
+    "    model: 调用的模型，默认为 gpt-3.5-turbo(ChatGPT)，有内测资格的用户可以选择 gpt-4\n",
+    "    '''\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=temperature, # 模型输出的温度系数，控制输出的随机程度\n",
+    "    )\n",
+    "    # 调用 OpenAI 的 ChatCompletion 接口\n",
+    "    return response.choices[0].message[\"content\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"知识查找正确性\": 1, \"回答一致性\": 1, \"回答幻觉比例\": 1, \"回答正确性\": 1, \"逻辑性\": 1, \"通顺性\": 1, \"智能性\": 0.9}'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question = \"应该如何使用南瓜书？\"\n",
+    "result = qa_chain({\"query\": question})\n",
+    "answer = result[\"result\"]\n",
+    "knowledge = result[\"source_documents\"]\n",
+    "\n",
+    "response = get_completion(prompt.format(question, answer, knowledge))\n",
+    "response"
    ]
   },
   {
@@ -579,7 +789,7 @@
     "\n",
     "4. 知识查找正确性。知识查找正确性指对于特定问题，从知识库检索到的知识片段是否正确、是否足够回答问题。知识查找正确性推荐使用大模型进行评估，即要求模型判别给定的知识片段是否足够回答问题。同时，该维度评估结果结合主观正确性可以计算幻觉情况，即如果主观回答正确但知识查找不正确，则说明产生了模型幻觉。\n",
     "\n",
-    "使用上述评估方法，基于已得到的验证集示例，我们评估本项目如下："
+    "使用上述评估方法，基于已得到的验证集示例，可以对项目做出合理评估。限于时间与人力，此处就不具体展示了。"
    ]
   }
  ],
