测试图片路径

--- a/docs/C1/3. 常⻅⼤模型.md
+++ b/docs/C1/3. 常⻅⼤模型.md
@@ -3,7 +3,7 @@
 大语言模型的发展历程虽然只有短短不到五年的时间，但是发展速度相当惊人，截止 2023 年
 6 月，国内外有超过百种大模型相继发布。按照时间线给出了 2019 年至 2023 年 6 月比较有影响力并且模型参数量超过 100 亿的大语言模型，如下图所示：
 
-![](../../figures/LLMs-0623-final.png)
+![](../figures/LLMs-0623-final.png)
 
 （该图来源于参考内容 [1] ）
 
