--- a/docs/C1/4. 什么是 LangChain.md
+++ b/docs/C1/4. 什么是 LangChain.md
@@ -17,7 +17,7 @@ ChatGPT 的巨大成功激发了越来越多的开发者兴趣，他们希望利
 
 LangChain 中模型输入/输出模块是与各种大语言模型进行交互的基本组件，是大语言模型应用的核心元素。**模型 I/O 允许您管理 prompt（提示），通过通用接口调用语言模型以及从模型输出中提取信息**。该模块的基本流程如下图所示。
 
-![](../../figures/langchain_model_input_output.png)
+![](../figures/langchain_model_input_output.png)
 
 主要包含以下部分：`Prompts`、`Language Models`以及 `Output Parsers`。**用户原始输入与模型和示例进行组合，然后输入给大语言模型，再根据大语言模型的返回结果进行输出或者结构化处理**。
 
@@ -27,7 +27,7 @@ LangChain 中模型输入/输出模块是与各种大语言模型进行交互的
 
 为了支持上述应用的构建，LangChain 数据连接（Data connection）模块通过以下方式提供组件来**加载、转换、存储和查询数据**：`Document loaders`、`Document transformers`、`Text embedding models`、`Vector stores` 以及 `Retrievers`。数据连接模块部分的基本框架如下图所示。
 
-![](../../figures/data_collection.png)
+![](../figures/data_collection.png)
 
 ## 3. 链（Chain）
 
@@ -116,13 +116,13 @@ overall_simple_chain.run(product)
 
 正如上面所说，在与语言模型交互时，你可能已经注意到一个关键问题：它们并不记忆你之前的交流内容，这在我们构建一些应用程序（如聊天机器人）的时候，带来了很大的挑战，使得对话似乎缺乏真正的连续性。因此，在本节中我们将介绍 LangChain 中的记忆模块，即如何将先前的对话嵌入到语言模型中的，使其具有连续对话的能力。
 
-![](../../figures/memory.png)
+![](../figures/memory.png)
 
 ## 5. 代理（Agents）
 
 **大型语言模型（LLMs）非常强大，但它们缺乏“最笨”的计算机程序可以轻松处理的特定能力**。LLM 对逻辑推理、计算和检索外部信息的能力较弱，这与最简单的计算机程序形成对比。例如，语言模型无法准确回答简单的计算问题，还有当询问最近发生的事件时，其回答也可能过时或错误，因为无法主动获取最新信息。这是由于当前语言模型仅依赖预训练数据，与外界“断开”。要克服这一缺陷， LangChain 框架提出了 “代理”( Agent ) 的解决方案。**代理作为语言模型的外部模块，可提供计算、逻辑、检索等功能的支持，使语言模型获得异常强大的推理和获取信息的超能力**。
 
-![](../../figures/Agents.png)
+![](../figures/Agents.png)
   
 ## 6.回调（Callback）
 
