--- a/docs/C2/1. 基本概念.md
+++ b/docs/C2/1. 基本概念.md
@@ -7,7 +7,7 @@ Prompt 最初是 NLP（自然语言处理）研究者为下游任务设计出来
 
 例如，在下面示例中，我们给 ChatGPT 的提问 “NLP 中的 Prompt 指什么”是我们的提问，其实也就是我们此次的 Prompt；而 ChatGPT 的返回结果就是此次的 Completion。也就是对于 ChatGPT 模型，该 Prompt 对应的 Completion 是下图的展示。
 
-![ChatGPT Prompt Examples](../../figures/prompt_example.png)
+![ChatGPT Prompt Examples](../figures/prompt_example.png)
 
 后续我们都将会使用 Prompt 替代给 LLM 的输入，使用 Completion 替代 LLM 的输出。同时，我们会结合具体案例，介绍如何设计 Prompt 能够充分发挥 LLM 的能力。
 
