--- a/docs/C2/2. 调用ChatGPT.md
+++ b/docs/C2/2. 调用ChatGPT.md
@@ -15,13 +15,13 @@ OpenAI API 服务是付费的，每一个开发者都需要首先获取并配置
 在获取OpenAI API key之前我们需要[openai官网](https://openai.com/)中注册一个账号。这里假设我们已经有了openai账号，先在[openai官网](https://openai.com/)登录，登录后如下图所示：
 
 <p align="center">
-  <img src="../../figures/openai-choose.png" width="1000" alt="openai官网登录后选择API">
+  <img src="../figures/openai-choose.png" width="1000" alt="openai官网登录后选择API">
 </p>
 
 我们选择`API`，然后点击右上角的头像，选择`View API keys`，如下图所示：
 
 <p align="center">
-  <img src="../../figures/openai-get-key.png" width="1000" alt="openai获取key">
+  <img src="../figures/openai-get-key.png" width="1000" alt="openai获取key">
 </p>
 
 点击`Create new secret key`按钮创建OpenAI API key，我们将创建好的OpenAI API key复制以此形式`OPENAI_API_KEY="sk-..."`保存到`.env`文件中，并将`.env`文件保存在项目根目录下。
