--- a/docs/C2/3. 调用百度文心.md
+++ b/docs/C2/3. 调用百度文心.md
@@ -18,19 +18,19 @@
 
 当然，在本教程中，我们并不需要将两层秘钥分离。我们将在该部分简述如何获取 API_Key、Secret_Key 以及如何基于 Key 获取 access_token 值，后续我们将直接通过 access_token 来调用文心大模型。
 
-![](../../figures/baidu_qianfan_1.png)
+![](../figures/baidu_qianfan_1.png)
 
 首先我们需要进入[文心千帆服务平台](https://console.bce.baidu.com/qianfan/overview)，点击上述应用接入按钮，创建一个调用文心大模型的应用。注意，你需要首先有一个经过实名认证的百度账号。
 
-![](../../figures/baidu_qianfan_2.png)
+![](../figures/baidu_qianfan_2.png)
 
 接着点击“去创建”按钮，进入应用创建界面：
 
-![](../../figures/baidu_qianfan_3.png)
+![](../figures/baidu_qianfan_3.png)
 
 简单输入基本信息，选择默认配置，创建应用即可。
 
-![](../../figures/baidu_qianfan_4.png)
+![](../figures/baidu_qianfan_4.png)
 
 创建完成后，我们可以在控制台看到创建的应用的 `AppID`、`API Key`、`Secret Key`。使用这里的 `API Key` 和 `Secret Key` 即可进行 access_token 的获取。
 
