--- a/docs/C2/4. 调用讯飞星火.md
+++ b/docs/C2/4. 调用讯飞星火.md
@@ -12,11 +12,11 @@
 
 首先进入到[星火认知大模型首页](https://xinghuo.xfyun.cn/sparkapi)，点击“免费试用”：
 
-![](../../figures/spark_1.png)
+![](../figures/spark_1.png)
 
 如果是没有领取过免费试用包的用户，可以领取到 100000 token 的试用量；如果已领取过，就会自动跳转到下方购买产品的页面。完成领取后，点击上文中的“服务管理”即可进入控制台：
 
-![](../../figures/spark_2.png)
+![](../figures/spark_2.png)
 
 在该界面，我们就可以看到我们获取到的 `APPID`、`APISecret` 和 `APIKey` 了。
 
