--- a/docs/C3/1. 大模型开发流程.md
+++ b/docs/C3/1. 大模型开发流程.md
@@ -6,7 +6,7 @@
 
 在大模型开发中，我们一般不会去大幅度改动模型，而是将大模型作为一个调用工具，通过 Prompt Engineering、数据工程、业务逻辑分解等手段来充分发挥大模型能力，适配应用任务，而不会将精力聚焦在优化模型本身上。这因此，作为大模型开发的初学者，我们并不需要深研大模型内部原理，而更需要掌握使用大模型的实践技巧。
 
-![](../../figures/LLM_developing.png)
+![](../figures/LLM_developing.png)
 <div align='center'>大模型开发要素</div>
 </p>
 
@@ -14,12 +14,12 @@
 
 同时，在评估思路上，大模型开发与传统 AI 开发也有了质的差异。传统 AI 开发需要首先构造训练集、测试集、验证集，通过在训练集上训练模型、在测试集上调优模型、在验证集上最终验证模型效果来实现性能的评估。然而，大模型开发更敏捷、灵活，我们一般不会在初期显式地确定训练集、验证集，由于不再需要训练子模型，我们不再构造训练集，而是直接从实际业务需求出发构造小批量验证集，设计合理 Prompt 来满足验证集效果。然后，我们将不断从业务逻辑中收集当下 Prompt 的 Bad Case，并将 Bad Case 加入到验证集中，针对性优化 Prompt，最后实现较好的泛化效果。
 
-![](../../figures/AI_eval.png)
+![](../figures/AI_eval.png)
 
 <div align = 'center'>传统 AI 评估</div>
 <p>
 
-![](../../figures/LLM_eval.png)
+![](../figures/LLM_eval.png)
 
 <div align = 'center'>LLM 评估</div>
 <p>
@@ -30,7 +30,7 @@
 
 结合上述分析，我们一般可以将大模型开发分解为以下几个流程：
 
-![](../../figures/LLM_developing_whole.png)
+![](../figures/LLM_developing_whole.png)
 
 1. 确定目标。在进行开发前，我们首先需要确定开发的目标，即要开发的应用的应用场景、目标人群、核心价值。对于个体开发者或小型开发团队而言，一般应先设定最小化目标，从构建一个 mvp（最小可行性产品）开始，逐步进行完善和优化。
 
