--- a/docs/C3/2. 项目流程简析.md
+++ b/docs/C3/2. 项目流程简析.md
@@ -25,7 +25,7 @@
 
 本项目实现原理如下图所示（图片来源<https://github.com/chatchat-space/Langchain-Chatchat/blob/master/img/langchain+chatglm.png>），过程包括加载本地文档 -> 读取文本 -> 文本分割 -> 文本向量化 -> question向量化 -> 在文本向量中匹配出与问句向量最相似的 top k个 -> 匹配出的文本作为上下文和问题一起添加到 prompt中 -> 提交给 LLM生成回答。
 
-![](../../figures/flow_chart.png)
+![](../figures/flow_chart.png)
 
 #### 1. 收集和整理用户提供的文档。
 
