--- a/docs/C4/1. 知识库文档处理.md
+++ b/docs/C4/1. 知识库文档处理.md
@@ -348,7 +348,7 @@ print(f"每一个元素的类型：{type(page)}.",
 ## 三、文档分割
 Langchain 中文本分割器都根据 `chunk_size` (块大小)和 `chunk_overlap` (块与块之间的重叠大小)进行分割。
 
-![image.png](../../figures/example-splitter.png)
+![image.png](../figures/example-splitter.png)
 
 * chunk_size 指每个块包含的字符或 Token （如单词、句子等）的数量
 
