--- a/docs/C5/1.Prompt 设计的原则和技巧.md
+++ b/docs/C5/1.Prompt 设计的原则和技巧.md
@@ -2,7 +2,7 @@
 
 LLM 时代 prompt 这个词对于每个使用者和开发者来说已经听得滚瓜烂熟，那么到底什么是 prompt 呢？简单来说，prompt（提示） 就是用户与大模型交互**输入的代称**。即我们给大模型的输入称为 Prompt，而大模型返回的输出一般称为 Completion。
   
-![](../../figures/prompt.png)
+![](../figures/prompt.png)
   
 对于具有较强自然语言理解、生成能力，能够实现多样化任务处理的大语言模型（LLM） 来说，一个好的的 Prompt 设计极大地决定了其能力的上限与下限。如何去使用 Prompt，以充分发挥 LLM 的性能？首先我们需要知道设计 Prompt 的原则，它们是每一个开发者设计 Prompt 所必须知道的基础概念。本节讨论了设计高效 Prompt 的两个关键原则：**编写清晰、具体的指令**和**给予模型充足思考时间**。掌握这两点，对创建可靠的语言模型交互尤为重要。
 
