--- a/docs/C5/3.添加历史对话的记忆功能.md
+++ b/docs/C5/3.添加历史对话的记忆功能.md
@@ -29,7 +29,7 @@ memory = ConversationBufferMemory(
 3. 获取结果后,存储所有答案到对话记忆区。
 4. 用户可在 UI 中查看完整的对话流程。
 
-![](../../figures/Modular_components.png)
+![](../figures/Modular_components.png)
 
 这种链式方式将新问题放在之前对话的语境中进行检索，可以处理依赖历史信息的查询。并保留所有信
 息在对话记忆中，方便追踪。
